--- a/004-client-authentication/src/index.css
+++ b/004-client-authentication/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.nav-link.active {
+  @apply text-white bg-slate-900 dark:bg-slate-800;
+}
